# easy_expectations

./: .gitignore  .pre-commit-config.yaml  README.md  easy_expectations_config.yaml  pyproject.toml  steps.txt
.github/workflows/: main.yaml
docs/: pypi_readme.md
docs/images/: demo (2).gif:Zone.Identifier
easy_expectations/: __init__.py  __main__.py  main.py
easy_expectations/ai_expectations/: core.py  flows.py  profiler_utils.py  usage_tracking.py
easy_expectations/ai_expectations/data/: datatypes.yaml  expectations_support.csv
easy_expectations/ai_expectations/flows/: base_conversation_flow.py  profile_data_flow.py  profiler_flow.py  requirements_flow.py
easy_expectations/cli/: cli.py
easy_expectations/cli/data/: empty_config_template.yaml
easy_expectations/config/: __init__.py  config.py  config.yaml
easy_expectations/config_enhancer/: data_systems_info.yaml  enhancer.py  system_config.py
easy_expectations/config_enhancer/strategies/: __init__.py  backend_strategy.py  base_strategy.py  checkpoint_connector.py  credentials_strategy.py  default_batch_identifiers.py  default_naming_strategy.py  execution_engine_strategy.py  filesystem_enhancement_strategy.py  group_entities.py  inferred_connector_strategy.py  not_implemented.py  path_strategy.py  prepare_docs_strategy.py  remove_temp_docs_strategy.py  run_template_strategy.py  suffix_default_paths.py  temp_artifacts_strategy.py  type_strategy.py
easy_expectations/config_mapper/: case_mapper.py  mapper.py  var_mapping.yaml
easy_expectations/fs_component_extractor/: base_fs_component_extractor.py  fs_component_extractor_factory.py  local_fs_component_extractor.py  s3_gcs_fs_component_extractor.py
easy_expectations/template_renderer/: renderer.py
easy_expectations/template_renderer/templates/: checkpoint.tpl  great_expectations.tpl
easy_expectations/template_renderer/templates/macros/: azure_options.j2  generate_backend.j2
easy_expectations/utils/: envsubst.py  logger.py  yaml_handler.py
easy_expectations/wrapper/: expectations_builder.py  wrapper.py
tests/integration/: test_cli_generate_skeleton.py  test_integration_bq.py  test_integration_gcs.py  test_integration_generate_config_run_e2e_local.py  test_integration_in_memory.py  test_integration_local.py
tests/integration/config_files/: bq_success.yaml  gcs_success.yaml  in_memory_fail.yaml  in_memory_success.yaml  local_success.yaml  sample_data.csv
